<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="6sp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200sp"
        app:cardElevation="6sp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="20sp"
        android:background="#ED292626"
        android:layout_marginTop="45sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/txtResult"
                android:ems="10"
                android:padding="8sp"
                android:background="#ED292626"
                android:gravity="end|bottom"
                android:textColor="@color/white"
                android:textSize="20pt"/>

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ED292626"
                android:hint="@string/_0"
                android:padding="8sp"
                android:layout_alignParentBottom="true"
                android:textColor="#6A6A6A"
                android:textSize="18pt"
                android:gravity="end"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginBottom="1pt"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAC"
                android:text="@string/ac"
                android:textSize="25sp"
                android:textColor="#FF5722"
                android:layout_weight="1"
                android:layout_marginEnd="1sp"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:onClick="clearEvent"
                android:background="@drawable/ac_btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnC"
                android:text="@string/del"
                android:textSize="25sp"
                android:textColor="#FF5722"
                android:layout_marginEnd="1pt"
                android:layout_height="90sp"
                android:layout_weight="1"
                android:layout_width="60sp"
                android:onClick="delEvent"
                android:background="@drawable/c_btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMod"
                android:text="@string/percent"
                android:layout_marginEnd="1pt"
                android:textSize="25sp"
                android:textColor="#FF5722"
                android:onClick="percentEvent"
                android:layout_weight="1"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDivide"
                android:text="@string/div"
                android:textSize="25sp"
                android:onClick="operatorEvent"
                android:layout_marginEnd="1pt"
                android:textColor="#FF5722"
                android:layout_weight="1"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSeven"
                android:text="@string/_7"
                android:textSize="25sp"
                android:onClick="numberEvent"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEight"
                android:text="@string/_8"
                android:textSize="25sp"
                android:layout_marginEnd="1pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNine"
                android:text="@string/_9"
                android:textSize="25sp"
                android:layout_marginEnd="1pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMultiply"
                android:text="@string/x"
                android:textSize="25sp"
                android:onClick="operatorEvent"
                android:layout_marginEnd="1pt"
                android:textColor="#FF5722"
                android:layout_weight="1"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFour"
                android:text="@string/_4"
                android:textSize="25sp"
                android:layout_marginEnd="1pt"
                android:onClick="numberEvent"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFive"
                android:text="@string/_5"
                android:layout_marginEnd="1pt"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSix"
                android:text="@string/_6"
                android:textSize="25sp"
                android:layout_marginEnd="1pt"
                android:onClick="numberEvent"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMinus"
                android:text="@string/minus"
                android:layout_marginEnd="1pt"
                android:textSize="25sp"
                android:onClick="operatorEvent"
                android:textColor="#FF5722"
                android:layout_weight="1"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginBottom="1pt"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOne"
                android:text="@string/_1"
                android:textSize="25sp"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:onClick="numberEvent"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTwo"
                android:text="@string/_2"
                android:textSize="25sp"
                android:layout_marginEnd="1pt"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:onClick="numberEvent"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnThree"
                android:text="@string/_3"
                android:textSize="25sp"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:onClick="numberEvent"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlus"
                android:text="@string/add"
                android:textColor="#FF5722"
                android:textSize="25sp"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:onClick="operatorEvent"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDZero"
                android:text="@string/_00"
                android:textSize="25sp"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:onClick="numberEvent"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnZero"
                android:text="@string/_0"
                android:textSize="25sp"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:onClick="numberEvent"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDot"
                android:text="@string/dot"
                android:textSize="25sp"
                android:layout_marginEnd="1pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEqual"
                android:text="@string/equal"
                android:textSize="25sp"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:onClick="equalEvent"
                android:textColor="#FF5722"
                android:layout_height="90sp"
                android:layout_width="60sp"
                android:background="@drawable/btn_design"/>
        </TableRow>

    </TableLayout>

</LinearLayout>